--- a/src/main/resources/templates/css/style.css
+++ b/src/main/resources/templates/css/style.css
@@ -73,3 +73,8 @@
     display: block;
     margin-top: 10px;
 }
+
+ #wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
