--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,27 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/UserJS.js"></script>
+    <script>
+        var pageContent;
+    $(document).ready(function(){
+        pageContent = $('.container');
+    });
+
+    function showUsersPages() {
+        $.get('/users', function (responce) {
+            loadHTML(responce);
+        });
+    }
+
+
+    function loadHTML(html) {
+        pageContent.html(html);
+    }
+    </script>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-git2.js"></script>
+
+
     <!-- table plugin -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.css"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.js"></script>
@@ -24,7 +43,7 @@
         <div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#" onclick="showUsersPages()">Users</a></li>
+                <li><a href="#" onclick="showUsersPages();">Users</a></li>
                 <li><a href="#">Page 2</a></li>
                 <li><a href="#">Page 3</a></li>
             </ul>
