--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,10 +42,16 @@
         </div>
         <div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#" onclick="showUsersPages();">Users</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Users
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" onclick="showUsersPages();">Show Users</a></li>
+                        <li><a href="#">Add User</a></li>
+                        <li><a href="#">Delete USer</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
