--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/templates; charset=UTF-8" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
-</head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-md-4 col-md-offset-4">
+
+<script>
+    $('#usersTable').bootstrapTable();
+</script>
+        <div class="addUsers">
             <h1 class="text-center login-title">Sign in</h1>
             <div class="account-wall">
-                <form class="form-signin">
+                <form class="addNewUser">
                     <input type="text" class="form-control" placeholder="Email" required="required" autofocus="autofocus"/>
-                    <input type="password" class="form-control" placeholder="Password" required="required"/>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">
-                        Sign in</button>
+                    <input type="text" class="form-control" placeholder="Password" required="required"/>
+                    <input type="text" class="form-control" placeholder="Login" required="required"/>
+                    <input type="text" class="form-control" placeholder="Email" required="required"/>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit" onclick="submitContact();">Sign in</button>
                     <label class="checkbox pull-left">
                         <input type="checkbox" value="remember-me">
                         Remember me
@@ -25,7 +21,4 @@
             </div>
             <a href="#" class="text-center new-account">Create an account </a>
         </div>
-    </div>
-</div>
-</body>
-</html>
+
