--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,12 +25,10 @@
         }
 
         function submitContact() {
-
-                console.log('form submited');
                 $.ajax({
                     url: '/add',
                     type: 'post',
-                    data: $("#addNewUser").serializeArray(),
+                    data: $(".addNewUser").serializeArray(),
                     success: function () {
                         showUsersPages();
                     },
